<?xml version="1.0"?>
<package>
  <name>yikun_cluster_msgs</name>
  <version>0.0.0</version>
  <description>The yikun_cluster_msgs package</description>

  <url type="repository">https://github.com/ShanSuIntelligent</url>
  <maintainer email="sunjiayuan@sensorobots.net">sjy</maintainer>
  <license>Apache 2.0</license>
  <author>sunjiayuan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geographic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
