<?xml version="1.0"?>
<package>
  <name>yikun_navigation</name>
  <version>0.1.0</version>
  <description>The yikun_navigation package</description>

  <url type="repository">https://github.com/ShanSuIntelligent</url>
  <maintainer email="sunjiayuan@sensorobots.net">sjy</maintainer>
  <license>Apache 2.0</license>
  <author>sunjiayuan</author>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>yikun_cluster_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>sdl-image</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>yikun_cluster_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xmlrpcpp</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>sdl-image</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
